--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8dbf2d2
+	base = 97e1ae6
 	trimbase = 
 	parent = release/indigo/openni2_launch
-	previous = 
+	previous = 8dbf2d2
