--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b5e354d
+	base = cef6008
 	trimbase = 
 	parent = rpm/indigo/openni2_launch
-	previous = 
+	previous = b5e354d
