--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 99f3b09
+	base = b32c3ba
 	trimbase = 
 	parent = debian/jade/openni2_launch
-	previous = 
+	previous = 99f3b09
