--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2ba7c17
+	base = 0fe4295
 	trimbase = 
 	parent = release/jade/openni2_launch
-	previous = 
+	previous = 2ba7c17
