--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4b8915f
+	base = 6f78b1e
 	trimbase = 
 	parent = rpm/jade/openni2_launch
-	previous = 
+	previous = 4b8915f
