--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2114f8b
+	base = ab0c489
 	trimbase = 
 	parent = release/kinetic/openni2_launch
-	previous = 
+	previous = 2114f8b
