--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 55f08b5
+	base = a1dcb34
 	trimbase = 
 	parent = debian/kinetic/openni2_launch
-	previous = 
+	previous = 55f08b5
