--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6c64df3
+	base = 3125c01
 	trimbase = 
 	parent = debian/kinetic/openni2_launch
-	previous = 
+	previous = 6c64df3
