--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ca467a5
+	base = 06ce13e
 	trimbase = 
 	parent = rpm/kinetic/openni2_launch
-	previous = 
+	previous = ca467a5
