--- a/package.xml
+++ b/package.xml
@@ -1,10 +1,11 @@
 <package>
   <name>openni2_launch</name>
-  <version>0.2.2</version>
+  <version>0.2.3</version>
   <description>
     Launch files to start the openni2_camera drivers using rgbd_launch.
   </description>
   <maintainer email="developers@unboundedrobotics.com">Michael Ferguson</maintainer>
+  <maintainer email="gm130s@gmail.com">Isaac I. Y. Saito</maintainer>
   <license>BSD</license>
 
   <author email="kammerl@willowgarage.com">Julius Kammerl</author>
