--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0d9a08e
+	base = d60175c
 	trimbase = 
 	parent = release/lunar/openni2_launch
-	previous = 
+	previous = 0d9a08e
