--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ff024de
+	base = 9323ef3
 	trimbase = 
 	parent = debian/lunar/openni2_launch
-	previous = 
+	previous = ff024de
