--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 21aedef
+	base = 4d92bee
 	trimbase = 
 	parent = debian/lunar/openni2_launch
-	previous = 
+	previous = 21aedef
