--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 688faf3
+	base = 1b0080e
 	trimbase = 
 	parent = rpm/lunar/openni2_launch
-	previous = 
+	previous = 688faf3
